--- a/index.html
+++ b/index.html
@@ -386,10 +386,12 @@ map.on('load', async () => {
     const bUrl = 'https://raw.githubusercontent.com/Cuttack-CDA-3DWebGIS/Sector-6_1/main/Sec6_Buildings.geojson';
     const rUrl = 'https://raw.githubusercontent.com/Cuttack-CDA-3DWebGIS/Sector-6_1/main/Sec6_Road.geojson';
     const sUrl = 'https://raw.githubusercontent.com/Cuttack-CDA-3DWebGIS/Sector-6_1/main/Sec6_Street_Light.geojson';
+   const boundaryUrl = 'https://raw.githubusercontent.com/hemanya2003/CDA/main/CDA_Boundary.geojson'; // unchanged
 
     buildingsGeo = await fetchJSON(bUrl);
     const roadsGeo = await fetchJSON(rUrl);
     const streetGeo = await fetchJSON(sUrl);
+   const boundaryData = await fetch(boundaryUrl).then(res => res.json());
     buildingsData = buildingsGeo;
 
     map.addSource('buildings', { type:'geojson', data: buildingsGeo });
@@ -453,6 +455,27 @@ map.on('load', async () => {
         'fill-extrusion-color': DEFAULT_BUILDING_COLOR,        // uniform blue for all buildings
         'fill-extrusion-height': buildHeightExpression(),
         'fill-extrusion-opacity': 0.85
+      }
+    });
+    // BOUNDARY (unchanged)
+    map.addSource('boundary', { type: 'geojson', data: boundaryData });
+    map.addLayer({
+      id: 'boundary-extrusion',
+      type: 'fill-extrusion',
+      source: 'boundary',
+      paint: {
+        'fill-extrusion-color': 'rgba(0,0,0,0)',
+        'fill-extrusion-height': 20,
+        'fill-extrusion-opacity': 0
+      }
+    });
+    map.addLayer({
+      id: 'boundary-line',
+      type: 'line',
+      source: 'boundary',
+      paint: {
+        'line-color': 'brown',
+        'line-width': 8
       }
     });
 
@@ -1094,3 +1117,4 @@ map.on('remove', function() {
 </script>
 </body>
 </html>
+
