--- a/index.html
+++ b/index.html
@@ -571,9 +571,9 @@ map.on('load', async () => {
         'fill-extrusion-color': [
           'match',
           ['get','Layer'],
-          'Divider', '#00FF00',
-          'Road', '#ff0000',
-          '#ff0000'
+          'Divider', '#006400',
+          'Road', '#BEBEBE',
+          '#BEBEBE'
         ],
         'fill-extrusion-opacity': 0.95,
         'fill-extrusion-vertical-gradient': false
@@ -2152,4 +2152,5 @@ document.getElementById('exportPNG').addEventListener('click', exportMapPNG);
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwJnprg61M8EWryIBQxT1_f3qxueLfQic&v=weekly" async defer></script>
 </body>
 </html>
+
 
